--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 5000
-MONGO_URI = mongodb+srv://nadaibraheem234_db_user:fHF4GjlCiglLkZrQ@bookstore.tgpdbum.mongodb.net/
+MONGO_URI=mongodb://127.0.0.1:27017/bookStore
 SECRET_KEY = "MY SECRET KEY"
