--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT = 5000
-MONGO_URI=mongodb://127.0.0.1:27017/bookStore
+MONGO_URI= mongodb+srv://nadaibraheem234_db_user:fVpf8HHdPRI6wo6O@bookstore.tgpdbum.mongodb.net/
+
 SECRET_KEY = "MY SECRET KEY"
